adds maven-compiler-plugin for Java 11
- updates some README list
- ignore target folder